--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,18 +10,16 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/headerLayout"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="@dimen/_110sdp"
         android:background="@color/colorAccent"
         android:layoutDirection="rtl"
-
         android:orientation="horizontal"
         android:padding="5dp">
 
         <ImageView
             android:id="@+id/img_avatar"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.2"
+            android:layout_width="@dimen/_70sdp"
             android:src="@drawable/ic_user" />
 
 
@@ -43,8 +41,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="30"
                     android:gravity="right|bottom"
-                    android:paddingRight="5dp"
-                    android:text=""
+                    android:textSize="@dimen/_11sdp"
+                    android:paddingRight="@dimen/_4sdp"
                     android:textColor="@color/colorWhite" />
             </LinearLayout>
 
@@ -63,8 +61,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="right"
-                    android:paddingRight="5dp"
+                    android:gravity="right|top"
+                    android:paddingRight="@dimen/_4sdp"
+                    android:textSize="@dimen/_10sdp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@color/colorWhite" />
 
@@ -73,8 +72,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="5dp"
+                    android:text="شسیسشیشسیشسی"
+                    android:paddingRight="@dimen/_4sdp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@color/colorWhite"
                     android:textFontWeight="100" />
@@ -87,8 +86,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_marginTop="150dp"
+        android:layout_height="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_110sdp"
         android:background="@drawable/shadow"/>
 
     <android.support.design.widget.FloatingActionButton
@@ -96,8 +95,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|top"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_86sdp"
         android:backgroundTint="@color/colorWhite"
         android:src="@drawable/ic_camera"
         app:borderWidth="0dp" />
@@ -106,15 +105,16 @@
         android:id="@+id/list_view_profileMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="150dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_marginTop="@dimen/_110sdp"
+        android:scrollbars="vertical"
+        android:layout_marginBottom="@dimen/_20sdp" />
 
     <TextView
         android:id="@+id/VersionTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/_3sdp"
         android:gravity="center"
         android:text="" />
 
