--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="@dimen/_80sdp"
     android:layoutDirection="rtl"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:padding="@dimen/_5sdp">
 
 
     <ImageView
         android:id="@+id/user_image"
-        android:layout_marginTop="10dp"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_width="@dimen/_55sdp"
+        android:layout_height="@dimen/_55sdp"
         android:src="@drawable/ic_user"
         />
 
@@ -37,7 +37,8 @@
                 android:fontFamily="@fonts/iran_san"
                 android:textColor="@color/colorText"
                 android:gravity="right|bottom"
-                android:paddingRight="5dp"
+                android:textSize="@dimen/_11sdp"
+                android:paddingRight="@dimen/_5sdp"
                 android:text="" />
 
 
@@ -47,12 +48,11 @@
             android:id="@+id/txt_message"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="5dp"
             android:layout_weight="0.5"
             android:fontFamily="@fonts/iran_san"
             android:gravity="right"
-            android:paddingRight="5dp"
-            android:text=""
+            android:textSize="@dimen/_10sdp"
+            android:paddingRight="@dimen/_5sdp"
             android:textColor="@color/colorText2" />
 
     </LinearLayout>
@@ -66,11 +66,11 @@
         <TextView
             android:id="@+id/txt_Location"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/_33sdp"
             android:layout_weight="0.2"
             android:background="@drawable/red_border"
             android:fontFamily="@fonts/iran_san"
-            android:textSize="11dp"
+            android:textSize="@dimen/_9sdp"
             android:gravity="center"
             android:text="" />
     </LinearLayout>
