--- a/app/src/main/res/layout/msg_list_item.xml
+++ b/app/src/main/res/layout/msg_list_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="@dimen/_120sdp"
     android:layoutDirection="rtl"
     android:id="@+id/layout"
     android:orientation="horizontal"
@@ -18,24 +17,23 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="0.4"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txt_title"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="7"
                 android:fontFamily="@fonts/iran_san"
                 android:gravity="right|center"
                 android:paddingRight="5dp"
                 android:text="" />
             <TextView
                 android:id="@+id/msgNew"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_gravity=""
+                android:layout_width="@dimen/_10sdp"
+                android:layout_height="@dimen/_10sdp"
+                android:paddingRight="@dimen/_10sdp"
                 android:background="@drawable/circle_drawable"/>
 
 
@@ -54,7 +52,7 @@
         <TextView
             android:id="@+id/txt_body"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_weight="0.3"
             android:textAlignment="center"
@@ -66,7 +64,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="0.4"
             android:gravity="center"
             android:layout_marginBottom="10sp"
@@ -75,9 +73,9 @@
             <Button
                 android:id="@+id/btn_ok"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_weight="0"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="@dimen/_20sdp"
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/button_background"
                 android:text="پذیرش"  />
@@ -85,10 +83,10 @@
             <Button
                 android:id="@+id/btn_cancel"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_weight="0"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginRight="@dimen/_20sdp"
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/button_background_gray"
                 android:text="عدم پذیرش"  />
