--- a/app/src/main/res/layout/user_find_view.xml
+++ b/app/src/main/res/layout/user_find_view.xml
@@ -1,31 +1,188 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:id="@+id/root"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/_5sdp"
+    android:background="@drawable/red_border"
+    android:layoutDirection="rtl"
+    android:orientation="vertical"
+    android:padding="@dimen/_10sdp">
 
-    <TextView
-        android:id="@+id/artist_Text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Artist"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="#4689C8"
-        android:textStyle="bold" />
+    <!--<TextView-->
+    <!--android:id="@+id/artist_Text"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:fontFamily="@font/iran_sani"-->
+    <!--android:textColor="@color/colorText"-->
+    <!--android:textSize="@dimen/_14sdp"-->
+    <!--android:textAlignment="center"-->
+    <!--tools:text="کاربر " />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_24sdp"
+        android:orientation="horizontal"
+        android:weightSum="10">
 
-    <TextView
-        android:id="@+id/track_Text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Track"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="#4689C8"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/date_Label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:fontFamily="@font/iran_sani"
+            android:textColor="@color/colorText"
+            android:textSize="@dimen/_11sdp"
+            tools:text="زمان" />
 
-    <Button
-        android:id="@+id/buy_Button"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/date_Text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:fontFamily="@font/iran_sani"
+            android:gravity="left"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/_11sdp"
+            tools:text="" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_24sdp"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:id="@+id/speed_Label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:fontFamily="@font/iran_sani"
+            android:textColor="@color/colorText"
+            android:textSize="@dimen/_11sdp"
+            tools:text="سرعت" />
+
+        <TextView
+            android:id="@+id/speed_Text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:fontFamily="@font/iran_sani"
+            android:gravity="left"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/_11sdp"
+            tools:text="" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_24sdp"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:id="@+id/direction_Label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:fontFamily="@font/iran_sani"
+            android:textColor="@color/colorText"
+            android:textSize="@dimen/_11sdp"
+            tools:text="جهت حرکت" />
+
+        <TextView
+            android:id="@+id/direction_Text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:fontFamily="@font/iran_sani"
+            android:gravity="left"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/_11sdp"
+            tools:text="" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_24sdp"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:id="@+id/geoData_Label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:fontFamily="@font/iran_sani"
+            android:textColor="@color/colorText"
+            android:textSize="@dimen/_11sdp"
+            tools:text="مختصات جغرافیایی" />
+
+        <ImageView
+            android:id="@+id/navigation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_navigation" />
+
+        <TextView
+            android:id="@+id/geoData_Text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:fontFamily="@font/iran_sani"
+            android:gravity="left"
+            android:paddingLeft="5dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/_10sdp"
+            tools:text="" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Buy" />
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_24sdp"
+            android:layout_weight="4"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/location_Label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/iran_sani"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/_11sdp"
+                tools:text="نام مکان" />
+
+            <ImageView
+                android:id="@+id/iconQ"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_question" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/locationLabel_Text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:fontFamily="@font/iran_sani"
+            android:gravity="left"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/_11sdp"
+            tools:text="" />
+    </LinearLayout>
 
 </LinearLayout>
