--- a/app/src/main/res/drawable/button_background_green.xml
+++ b/app/src/main/res/drawable/button_background_green.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="2dp"
-        android:color="@color/colorAccent" />
+        android:color="@color/colorGreen" />
 
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/colorGreen" />
 
     <padding
         android:left="1dp"
