--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".AddUserActivity">
 
     <android.support.v7.widget.Toolbar
@@ -34,7 +35,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="75dp"
         android:layout_marginRight="20dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
@@ -80,6 +80,19 @@
             android:visibility="invisible"
             app:indicatorColor="@color/colorText2"
             app:indicatorName="BallClipRotateMultipleIndicator" />
+        <TextView
+            android:id="@+id/NotFoundImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/red_border"
+            android:fontFamily="@font/iran_sani"
+            android:gravity="center"
+            android:text="متاسفانه کاربری یافت نشد"
+            android:padding="@dimen/_10sdp"
+            android:textAlignment="center"
+            android:textColor="@color/colorText"
+            android:visibility="gone" />
 
         <ListView
             android:id="@+id/list_view"
@@ -88,25 +101,4 @@
             android:layout_marginTop="30dp" />
     </LinearLayout>
 
-
-    <TextView
-        android:id="@+id/NotFoundImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/red_border"
-        android:fontFamily="fonts/iran_san.ttf"
-        android:gravity="center"
-        android:scaleType="fitXY"
-        android:src="@drawable/logo"
-        android:text="متاسفانه کاربری یافت نشد"
-        android:textAlignment="center"
-        android:textColor="@color/colorText"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
