--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -66,6 +66,7 @@
             android:id="@+id/SearchBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
             android:layout_marginLeft="@dimen/_12sdp"
             android:layout_marginRight="@dimen/_12sdp"
             android:layout_weight="0"
@@ -91,6 +92,7 @@
             android:text="متاسفانه کاربری یافت نشد"
             android:padding="@dimen/_10sdp"
             android:textAlignment="center"
+            android:layout_marginTop="@dimen/_20sdp"
             android:textColor="@color/colorText"
             android:visibility="gone" />
 
